--- a/Page_img.html
+++ b/Page_img.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <title>Dice and Fold expanded mod</title>
+<title>
+    Dice and Fold expanded mod Concept art
+</title>
 </head>
 <body>
-<section>
-
-</section>
 </body>
 </html>
