--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <title>Dice and Fold expanded mod</title>
+    <link rel="stylesheet" href="Cascadingstylesheet.css">
+    <title>Dice and Fold expanded mod</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+    <img src="Images/Dice_and_Fold.png" alt="Dice and Fold Game picture" width="300px" height="250px">
 <section>
-
+<h1>Dice and Fold expanded mod</h1>
 </section>
 </body>
 </html>
